src/main/java/org/example/interpreter/error/InterpretingException.java
package org.example.interpreter.error;

public class InterpretingException extends Exception {

    public InterpretingException(String message) {
        super(message);
    }

}
